feat: Add 'The Problem' section — why you need AI-Scrum
- No memory, feature chasing, 'it should work', no process
- Solution banner: how AI-Scrum addresses each pain point
- Positioned right after 'What This Is' for narrative flow

--- a/index.html
+++ b/index.html
@@ -94,6 +94,42 @@
     </div>
   </section>
 
+  <!-- The Problem -->
+  <section class="section section-alt" id="why">
+    <div class="container">
+      <h2 class="section-title">The Problem</h2>
+      <p class="section-intro">AI coding assistants are powerful. But without structure, they create as many problems as they solve.</p>
+      
+      <div class="problem-grid">
+        <div class="problem">
+          <div class="problem-icon">😵</div>
+          <h3>No Memory</h3>
+          <p>Every session starts from zero. The AI doesn't know what you did yesterday, what decisions were made, or what failed last sprint. Context is lost every time.</p>
+        </div>
+        <div class="problem">
+          <div class="problem-icon">🏃</div>
+          <h3>Feature Chasing</h3>
+          <p>The AI happily starts new features while old ones are half-done. No discipline, no focus, no "finish what you started." Your backlog grows while nothing ships.</p>
+        </div>
+        <div class="problem">
+          <div class="problem-icon">✅</div>
+          <h3>"It Should Work"</h3>
+          <p>The AI says "done" without running tests. It claims success without evidence. You merge confidently — and discover the bug in production.</p>
+        </div>
+        <div class="problem">
+          <div class="problem-icon">🤷</div>
+          <h3>No Process</h3>
+          <p>Ad-hoc prompting produces ad-hoc results. Without a defined workflow, there's no way to improve. Every session is a fresh experiment.</p>
+        </div>
+      </div>
+
+      <div class="solution-banner">
+        <h3>AI-Scrum solves this.</h3>
+        <p>Sprint logs preserve memory. Quality gates enforce evidence. The backlog enforces focus. Retros improve the process itself. Every sprint is better than the last.</p>
+      </div>
+    </div>
+  </section>
+
   <!-- Copilot CLI -->
   <section class="section section-alt" id="copilot">
     <div class="container">
