fix: Correct manifesto note — above/below not left/right

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       </div>
 
       <div class="manifesto-note">
-        <p>That is, while there is value in the items on the right, we value the items on the left more.</p>
+        <p>That is, while there is value in the items below, we value the items above more.</p>
       </div>
 
       <div class="principles">
