feat: Add comparison table — ad-hoc vs spec-driven vs AI-Scrum
- 7 dimensions: approach, planning, memory, quality, adaptability, improvement, best-when
- Positions AI-Scrum for evolving projects vs spec-driven for one-shot tasks
- Highlighted column for AI-Scrum with subtle purple tint

--- a/index.html
+++ b/index.html
@@ -127,6 +127,67 @@
         <h3>AI-Scrum solves this.</h3>
         <p>Sprint logs preserve memory. Quality gates enforce evidence. The backlog enforces focus. Retros improve the process itself. Every sprint is better than the last.</p>
       </div>
+
+      <div class="comparison-section">
+        <h3>How It Compares</h3>
+        <div class="comparison-table-wrap">
+          <table class="comparison-table">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Ad-hoc Prompting</th>
+                <th>Spec-Driven Development</th>
+                <th class="col-highlight">AI-Scrum</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="row-label">Approach</td>
+                <td>Chat until it works</td>
+                <td>Write full spec upfront, AI implements</td>
+                <td class="col-highlight">Iterative sprints with feedback loops</td>
+              </tr>
+              <tr>
+                <td class="row-label">Planning</td>
+                <td>None</td>
+                <td>Heavy upfront — spec, tests, architecture</td>
+                <td class="col-highlight">Just-in-time — ICE scoring, sprint-sized</td>
+              </tr>
+              <tr>
+                <td class="row-label">Memory</td>
+                <td>None — context lost each session</td>
+                <td>Spec is the memory</td>
+                <td class="col-highlight">Sprint logs, issue comments, velocity data</td>
+              </tr>
+              <tr>
+                <td class="row-label">Quality</td>
+                <td>Hope for the best</td>
+                <td>Test-first from spec</td>
+                <td class="col-highlight">Quality gates, DoD, CI before merge</td>
+              </tr>
+              <tr>
+                <td class="row-label">Adapts to change</td>
+                <td>Instantly — no plan to break</td>
+                <td>Slowly — spec rewrite needed</td>
+                <td class="col-highlight">Via backlog — changes are welcomed, not feared</td>
+              </tr>
+              <tr>
+                <td class="row-label">Process improves</td>
+                <td>❌ No</td>
+                <td>❌ Spec improves, process doesn't</td>
+                <td class="col-highlight">✅ Every retro improves tools + workflow</td>
+              </tr>
+              <tr>
+                <td class="row-label">Best when</td>
+                <td>Quick prototypes, one-offs</td>
+                <td>Well-understood problems, clear specs</td>
+                <td class="col-highlight">Ongoing projects, evolving requirements</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <p class="comparison-note">Spec-driven works great for one-shot tasks with clear requirements. AI-Scrum is for projects that live and evolve — where you need sustained quality, not just initial delivery.</p>
+      </div>
     </div>
   </section>
 
