fix: Reframe from single AI agent to AI agent team
- Lead agent as PO+SM dispatches specialized sub-agents
- Operating model shows team structure (lead, sub-agents, built-in)
- Autonomous variant describes team, not single agent

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <div class="cards">
         <div class="card">
           <div class="card-icon">🤖</div>
-          <h3>AI as PO + Scrum Master</h3>
-          <p>The AI agent owns the sprint cycle end-to-end. It triages the backlog, plans sprints, executes issues, runs retros, and improves its own process. You're the stakeholder — you set direction, not details.</p>
+          <h3>AI Agent Team</h3>
+          <p>A lead agent manages the sprint cycle — planning, execution, retros. It dispatches specialized sub-agents for code, tests, security, docs, and reviews. You're the stakeholder — you set direction, not details.</p>
         </div>
         <div class="card">
           <div class="card-icon">🔄</div>
@@ -254,13 +254,13 @@
         <div class="model-role">
           <div class="role-header ai">
             <span class="role-emoji">🤖</span>
-            <h3>AI Agent (PO + SM)</h3>
+            <h3>AI Agent Team (PO + SM + Devs)</h3>
           </div>
           <ul>
-            <li>Triage and prioritize backlog</li>
-            <li>Plan and execute sprints</li>
-            <li>Write code, tests, and docs</li>
-            <li>Run retros and improve process</li>
+            <li>Lead agent: triage, plan, execute, retro</li>
+            <li>Sub-agents: code, tests, docs, security, review</li>
+            <li>Built-in agents: search, commands, code review</li>
+            <li>Continuous process improvement</li>
             <li>Escalate only on MUST criteria</li>
           </ul>
         </div>
@@ -753,7 +753,7 @@ gh issue list --milestone "Sprint 5" --state closed</code></pre>
         <div class="card variant-card">
           <div class="card-icon">🤖</div>
           <h3>Autonomous</h3>
-          <p>AI is PO + Scrum Master. Human is stakeholder. The AI runs sprints end-to-end and only escalates on MUST criteria. Sprint reviews are async notifications.</p>
+          <p>AI agent team runs sprints end-to-end — a lead agent as PO + SM dispatches specialized sub-agents for code, tests, security, and reviews. Only escalates on MUST criteria. Sprint reviews are async notifications.</p>
           <div class="variant-best">Best for: Solo projects, side projects, autonomous workflows</div>
           <a href="https://github.com/trsdn/copilot-scrum-autonomous" class="btn btn-primary">Use Autonomous Template →</a>
         </div>
