feat: Add acceptance criteria to DoD on website

--- a/index.html
+++ b/index.html
@@ -615,6 +615,10 @@ gh label create "priority:low" --color "C5DEF5"</code></pre>
       <p class="section-intro">Every issue must meet ALL applicable criteria before closing. No shortcuts.</p>
       
       <div class="dod-grid">
+        <div class="dod-item dod-highlight">
+          <div class="dod-check">✓</div>
+          <div class="dod-text"><strong>Acceptance criteria</strong> defined on the issue <strong>before</strong> implementation starts</div>
+        </div>
         <div class="dod-item">
           <div class="dod-check">✓</div>
           <div class="dod-text">Code implemented, <strong>lint clean</strong>, <strong>types clean</strong></div>
