--- a/index.html
+++ b/index.html
@@ -735,47 +735,47 @@ gh issue list --milestone "Sprint 5" --state closed</code></pre>
   <section class="section section-alt" id="variants">
     <div class="container">
       <h2 class="section-title">Choose Your Style</h2>
-      <p class="section-intro">Same process, same constitution, same quality gates — different level of human involvement.</p>
+      <p class="section-intro">Start guided, graduate to autonomous. Same process, same constitution — different level of human presence.</p>
       <div class="variant-grid">
-        <div class="card variant-card variant-autonomous">
-          <div class="variant-header">
-            <div class="card-icon">🤖</div>
-            <h3>Autonomous</h3>
-            <p class="variant-tagline">AI drives. You review.</p>
-          </div>
-          <p>AI agent team runs sprints end-to-end — lead agent acts as PO + SM, dispatches sub-agents for code, tests, security, and reviews. Only escalates on MUST criteria.</p>
-          <ul class="variant-features">
-            <li><span class="check">✓</span> AI initiates all ceremonies</li>
-            <li><span class="check">✓</span> Sprint reviews via async notification</li>
-            <li><span class="check">✓</span> Autonomous scope &amp; priority decisions</li>
-            <li><span class="check">✓</span> MUST-escalation safety net</li>
-            <li><span class="muted">—</span> No per-step human approval</li>
-          </ul>
-          <div class="variant-who">
-            <strong>You are:</strong> Stakeholder — set direction, review results
-          </div>
-          <div class="variant-best">Best for: Solo projects, side projects, autonomous workflows</div>
-          <a href="https://github.com/trsdn/copilot-scrum-autonomous" class="btn btn-primary">Use Autonomous Template →</a>
-        </div>
         <div class="card variant-card variant-guided">
           <div class="variant-header">
             <div class="card-icon">🎯</div>
             <h3>Guided</h3>
-            <p class="variant-tagline">You drive. AI executes.</p>
+            <p class="variant-tagline">Interactive. Step by step.</p>
           </div>
-          <p>Human is PO. AI is Scrum Master + developer. You trigger each phase with slash commands, approve scope, and control execution. Every ceremony requires your consent.</p>
+          <p>You're at the keyboard. You trigger each ceremony with slash commands, review results, approve scope, and decide what happens next. Sessions last as long as you're engaged.</p>
           <ul class="variant-features">
-            <li><span class="check">✓</span> You trigger each ceremony via <code>/slash-command</code></li>
-            <li><span class="check">✓</span> Approve sprint scope before execution</li>
-            <li><span class="check">✓</span> Review &amp; accept each deliverable</li>
+            <li><span class="check">✓</span> You trigger each phase via <code>/slash-command</code></li>
+            <li><span class="check">✓</span> Review &amp; approve before AI proceeds</li>
             <li><span class="check">✓</span> Full visibility into every decision</li>
-            <li><span class="check">✓</span> Step-by-step human control</li>
+            <li><span class="check">✓</span> Learn the framework hands-on</li>
+            <li><span class="check">✓</span> Session = your working time</li>
           </ul>
           <div class="variant-who">
-            <strong>You are:</strong> Product Owner — approve scope, accept work
+            <strong>You are:</strong> Product Owner — present, steering, deciding
           </div>
-          <div class="variant-best">Best for: Team projects, learning the framework, hands-on control</div>
+          <div class="variant-best">Best for: Learning AI-Scrum, team projects, when you want control</div>
           <a href="https://github.com/trsdn/copilot-scrum-guided" class="btn btn-primary">Use Guided Template →</a>
+        </div>
+        <div class="card variant-card variant-autonomous">
+          <div class="variant-header">
+            <div class="card-icon">🤖</div>
+            <h3>Autonomous</h3>
+            <p class="variant-tagline">Runs for hours. Unsupervised.</p>
+          </div>
+          <p>Start a sprint and walk away. The AI agent team plans, implements, tests, reviews, and retros — running for hours without human input. You come back to finished work, documented decisions, and a notification on your phone.</p>
+          <ul class="variant-features">
+            <li><span class="check">✓</span> Multi-hour unattended sessions</li>
+            <li><span class="check">✓</span> Full sprint cycle without human presence</li>
+            <li><span class="check">✓</span> Lead agent dispatches specialized sub-agents</li>
+            <li><span class="check">✓</span> Push notifications when done or stuck</li>
+            <li><span class="check">✓</span> MUST-escalation safety net for critical decisions</li>
+          </ul>
+          <div class="variant-who">
+            <strong>You are:</strong> Stakeholder — set direction, review results later
+          </div>
+          <div class="variant-best">Best for: Solo devs, side projects, overnight runs, maximizing output</div>
+          <a href="https://github.com/trsdn/copilot-scrum-autonomous" class="btn btn-primary">Use Autonomous Template →</a>
         </div>
       </div>
     </div>
