feat: add Two Modes section early on page — guided vs autonomous

--- a/index.html
+++ b/index.html
@@ -77,6 +77,31 @@
     </div>
   </section>
 
+  <!-- Two Modes -->
+  <section class="section section-alt" id="modes">
+    <div class="container">
+      <h2 class="section-title">Two Modes</h2>
+      <p class="section-intro">Start guided to learn the framework. Graduate to autonomous when you trust the process.</p>
+      <div class="modes-grid">
+        <div class="mode-card mode-guided">
+          <div class="mode-icon">🎯</div>
+          <div class="mode-content">
+            <h3>Guided</h3>
+            <p>You're at the keyboard. You trigger each ceremony, review AI decisions, approve scope. Interactive sessions — the AI works while you watch.</p>
+          </div>
+        </div>
+        <div class="mode-arrow">→</div>
+        <div class="mode-card mode-autonomous">
+          <div class="mode-icon">🤖</div>
+          <div class="mode-content">
+            <h3>Autonomous</h3>
+            <p>Start a sprint and walk away. The AI runs for hours — planning, coding, testing, reviewing. You come back to finished work and a push notification.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- The Problem -->
   <section class="section section-alt" id="why">
     <div class="container">
