--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI-Scrum — Human-AI Collaboration Framework</title>
-  <meta name="description" content="A Scrum-inspired framework for human-AI software development, optimized for GitHub Copilot CLI. Agents, prompts, sprint ceremonies, quality gates — all ready to use.">
+  <meta name="description" content="A Scrum-inspired framework for human-AI software development, optimized for GitHub Copilot CLI. Agents, skills, sprint ceremonies, quality gates — all ready to use.">
   <meta property="og:title" content="AI-Scrum — Human-AI Collaboration Framework for Copilot CLI">
-  <meta property="og:description" content="A Scrum-inspired framework for human-AI collaboration, optimized for GitHub Copilot CLI. Agents, prompts, quality gates — ready to use.">
+  <meta property="og:description" content="A Scrum-inspired framework for human-AI collaboration, optimized for GitHub Copilot CLI. Agents, skills, quality gates — ready to use.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://trsdn.github.io/ai-scrum/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,7 +72,7 @@
         <div class="card">
           <div class="card-icon">📋</div>
           <h3>Template Repository</h3>
-          <p>Fork it, customize the placeholders, and you have a fully configured AI development process. Agents, prompts, process docs, sprint templates — everything included.</p>
+          <p>Fork it, customize the placeholders, and you have a fully configured AI development process. Agents, skills, process docs, sprint templates — everything included.</p>
         </div>
       </div>
     </div>
@@ -216,8 +216,8 @@
           <div class="copilot-desc">Custom agents invokable via <code>@agent-name</code>. Each agent has a role, specialized instructions, and domain expertise. 11 agents included.</div>
         </div>
         <div class="copilot-feature">
-          <div class="copilot-file"><code>.github/prompts/*.prompt.md</code></div>
-          <div class="copilot-desc">Slash commands invokable via <code>/prompt-name</code>. Sprint ceremonies, orchestration pipelines, code review — 19 prompts ready to use.</div>
+          <div class="copilot-file"><code>.github/skills/*/SKILL.md</code></div>
+          <div class="copilot-desc">Skills auto-loaded by Copilot CLI when relevant. Sprint ceremonies, orchestration pipelines, code review — 20 skills ready to use.</div>
         </div>
         <div class="copilot-feature">
           <div class="copilot-file"><code>Plan mode</code> <span class="copilot-builtin">built-in</span></div>
@@ -442,7 +442,7 @@
           </div>
         </div>
         <div class="feature">
-          <h3>⚡ 19 Prompts</h3>
+          <h3>⚡ 20 Skills</h3>
           <div class="tag-cloud">
             <span class="tag tag-ceremony">sprint-planning</span>
             <span class="tag tag-ceremony">sprint-start</span>
@@ -579,7 +579,7 @@ gh issue create --title "idea: Your feature" \
           <div class="pillar-rank">4</div>
           <div class="pillar-content">
             <h3>Continuous Improvement</h3>
-            <p>Every retro evaluates the process itself — agents, prompts, workflows. Friction gets automated. Failures get root-caused.</p>
+            <p>Every retro evaluates the process itself — agents, skills, workflows. Friction gets automated. Failures get root-caused.</p>
           </div>
         </div>
       </div>
