docs: add prerequisites with experimental/autopilot mode

--- a/index.html
+++ b/index.html
@@ -489,6 +489,20 @@
       <h2 class="section-title">Getting Started</h2>
       <div class="steps-vertical">
         <div class="step-v">
+          <div class="step-v-num">0</div>
+          <div class="step-v-content">
+            <h3>Prerequisites</h3>
+            <p>You need an active <a href="https://github.com/features/copilot/plans">GitHub Copilot subscription</a> (Pro, Pro+, Business, or Enterprise) and <a href="https://docs.github.com/en/copilot/concepts/agents/about-copilot-cli">Copilot CLI</a> installed.</p>
+            <pre><code># Install Copilot CLI
+brew install copilot-cli          # macOS / Linux
+winget install GitHub.Copilot     # Windows
+
+# Enable experimental mode (required for Autopilot)
+copilot --experimental</code></pre>
+            <p>Autopilot mode lets the agent continue working until a task is complete. Activate it with <code>Shift+Tab</code> to cycle to Autopilot mode inside a session. This is especially important for the <strong>autonomous</strong> variant.</p>
+          </div>
+        </div>
+        <div class="step-v">
           <div class="step-v-num">1</div>
           <div class="step-v-content">
             <h3>Use the Template</h3>
